Basic pull of a game, 404, 500

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>{{ title }}</title></head>
     <body>
-        <h1>Hello, {{ message }}</h1>
+        <h1>gd2score</h1>
     </body>
 </html>
 
