--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,13 +9,9 @@
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_blue.css">
-        <script>
-            var selectedDate = '{{ date }}';
-            var currentGame = '{{ currentGame }}';
-        </script>
     </head>
     <body>
-        <form>
+        <form data-current-game="{{ current_game }}" data-date="{{ date }}">
             <input class="flatpickr flatpickr-input active" type="text" placeholder="Select Date.." readonly="readonly">
             <select id="games">
                 {% for key, value in games.items() %}
