--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,12 @@
+svg {
+    width: 100%;
+    height: auto;
+}
+
+#scorecard {
+    max-width: 600px;
+}
+
 g.runner {
     stroke: gray;
     fill: gray;
