--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
     <head>
         <title>Scorecard</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
                 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
                 crossorigin="anonymous"></script>
