--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,11 +15,11 @@
         <form data-current-game="{{ current_game }}" data-date="{{ date }}">
             <input class="flatpickr flatpickr-input active" type="text" placeholder="Select Date.." readonly="readonly">
             <select id="games">
+                <option value="placeholder" disabled selected hidden>{{ games|length }} Games</option>
                 {% for key, value in games.items() %}
                 <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
             </select>
-            <input id="view" type="button" value="View Scorecard"/>
         </form>
 
         <div id="scorecard">{{ svg }}</div>
