--- a/app/static/style.css
+++ b/app/static/style.css
@@ -31,6 +31,10 @@ rect {
     fill: none;
 }
 
+rect.inning-fill {
+    fill: #F5F5F5;
+}
+
 .team-box, .home-pitcher-hash, .away-pitcher-hash {
     stroke: gray;
     stroke-width: 0.4;
